[package]
name = "codespaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["blocking", "json"]}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "^1.0.67"
